--- a/PROYECTO/DESIGNER/FComponentes.html
+++ b/PROYECTO/DESIGNER/FComponentes.html
@@ -10,7 +10,8 @@
   	<h1>FComponentes</h1>
     <form class="contact_form">
     	<ul>
-    		<li><span for="CodDtMed">CodDetMedida:</span><input type="text" style="width : 100 % ;"  placeholder=""></li>
+    	 <li><span for="CodDtMed">CodDetMedida:</span><input type="text" style="width : 100 % ;"  placeholder=""></li>
+        <li><span for="Nombre">Nombre:</span><input type="text" style="width : 100 % ;"  placeholder="" ></li>
         <input type="submit" value="Guardar"  id="boton">
     	</ul>
     </form>
