--- a/PROYECTO/DESIGNER/FComponentes.html
+++ b/PROYECTO/DESIGNER/FComponentes.html
@@ -13,6 +13,7 @@
     	 <li><span for="CodDtMed">CodDetMedida:</span><input type="text" style="width : 100 % ;"  placeholder=""></li>
         <li><span for="Nombre">Nombre:</span><input type="text" style="width : 100 % ;"  placeholder="" ></li>
         <li><span for="Tipo">Tipo:</span><input type="text" style="width : 100 % ;"  placeholder="" ></li>
+         <li><span for="Cantidad">Cantidad:</span><input type="text" style="width : 100 % ;"  placeholder="" ></li>
         <input type="submit" value="Guardar"  id="boton">
     	</ul>
     </form>
