--- a/PROYECTO/DESIGNER/FGuiaRemision.html
+++ b/PROYECTO/DESIGNER/FGuiaRemision.html
@@ -11,6 +11,7 @@
     <form class="contact_form">
     	<ul>
     	 <li><span for="NroGuia">NroGuia:</span><input type="text" style="width : 100 % ;"  placeholder=""></li>
+       <li><span for="PPartida">PuntoPartida:</span><input type="text" style="width:100 % ;"  placeholder=""></li>
         <input type="submit" value="Guardar"  id="boton">
     	</ul>
     </form>
