--- a/PROYECTO/DESIGNER/FGuiaRemision.html
+++ b/PROYECTO/DESIGNER/FGuiaRemision.html
@@ -13,6 +13,7 @@
     	 <li><span for="NroGuia">NroGuia:</span><input type="text" style="width : 100 % ;"  placeholder=""></li>
        <li><span for="PPartida">PuntoPartida:</span><input type="text" style="width:100 % ;"  placeholder=""></li>
        <li><span for="PLlegada">PuntoLlegada:</span><input type="text" style="width:100 % ;"  placeholder=""></li>
+       <li><span for="FecEmision">FechaEmision:</span><input type="text" style="width:100 % ;"  placeholder=""></li>
         <input type="submit" value="Guardar"  id="boton">
     	</ul>
     </form>
