--- a/PROYECTO/DESIGNER/FMedicamento.html
+++ b/PROYECTO/DESIGNER/FMedicamento.html
@@ -14,7 +14,7 @@
     		<li><label for="Nombre">Nombre:</label><input type="text" style="width : 100 % ;"  placeholder="" ></li>
     		<li><label for="NomLaboratorio">NomLaboratorio:</label><input type="text" style="width : 100 % ;"  placeholder="" ></li>
         <li><label for="IDLaboratorio">IDLaboratorio:</label><input type="text" style="width : 100 % ;"  placeholder="" ></li>
-        
+        <input type="submit" value="Guardar"  id="boton">
     	</ul>
     </form>
   </div>
