--- a/PROYECTO/DESIGNER/FGuiaRemision.html
+++ b/PROYECTO/DESIGNER/FGuiaRemision.html
@@ -14,6 +14,7 @@
        <li><span for="PPartida">PuntoPartida:</span><input type="text" style="width:100 % ;"  placeholder=""></li>
        <li><span for="PLlegada">PuntoLlegada:</span><input type="text" style="width:100 % ;"  placeholder=""></li>
        <li><span for="FecEmision">FechaEmision:</span><input type="text" style="width:100 % ;"  placeholder=""></li>
+       <li><span for="FecInicTraslado">FecInicTraslado:</span><input type="text" style="width:100 % ;"  placeholder=""></li>
         <input type="submit" value="Guardar"  id="boton">
     	</ul>
     </form>
