--- a/PROYECTO/DESIGNER/FGuiaRemision.html
+++ b/PROYECTO/DESIGNER/FGuiaRemision.html
@@ -16,6 +16,7 @@
        <li><span for="FecEmision">FechaEmision:</span><input type="text" style="width:100 % ;"  placeholder=""></li>
        <li><span for="FecInicTraslado">FecInicTraslado:</span><input type="text" style="width:100 % ;"  placeholder=""></li>
        <li><span for="MotTraslado">MotivoTraslado:</span><input type="text" style="width:100 % ;"  placeholder=""></li>
+       <li><span for="IdTransporte">IdTransporte:</span><input type="text" style="width:100 % ;"  placeholder=""></li>
         <input type="submit" value="Guardar"  id="boton">
     	</ul>
     </form>
