--- a/PROYECTO/DESIGNER/FComponentes.html
+++ b/PROYECTO/DESIGNER/FComponentes.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<title>Formulario</title>
-	<link rel="stylesheet" type="text/css" href="../estilo/estilo.css">
+	<link rel="stylesheet" type="text/css" href="../estilo/fcomponentes.css">
 </head>
 <body>
   <div>
