--- a/PROYECTO/DESIGNER/FComponentes.html
+++ b/PROYECTO/DESIGNER/FComponentes.html
@@ -7,16 +7,22 @@
 </head>
 <body>
   <div>
-  	<h1>FComponentes</h1>
+	</br>
+  	<h1>COMPONENTES</h1>
     <form class="contact_form">
-    	<ul>
-    	 <li><span for="CodDtMed">CodDetMedida:</span><input type="text" style="width : 100 % ;"  placeholder=""></li>
-        <li><span for="Nombre">Nombre:</span><input type="text" style="width : 100 % ;"  placeholder="" ></li>
-        <li><span for="Tipo">Tipo:</span><input type="text" style="width : 100 % ;"  placeholder="" ></li>
-         <li><span for="Cantidad">Cantidad:</span><input type="text" style="width : 100 % ;"  placeholder="" ></li>
-         <li><span for="CodUniMedida">CodUniMedida:</span><input type="text" style="width : 100 % ;"  placeholder=""></li>
-        <input type="submit" value="Guardar"  id="boton">
-    	</ul>
+		</br>
+    	<input type="text" style="width : 100 % ;"  placeholder="CodDetMedida">
+
+      <input type="text" style="width : 100 % ;"  placeholder="Nombre" >
+
+			<input type="text" style="width : 100 % ;"  placeholder="Tipo" >
+
+			<input type="text" style="width : 100 % ;"  placeholder="Cantidad" >
+
+			<input type="text" style="width : 100 % ;"  placeholder="CodUniMedida">
+
+			<input type="submit" id="button" value="Guardar" />
+
     </form>
   </div>
 </body>
