--- a/PROYECTO/DESIGNER/FComponentes.html
+++ b/PROYECTO/DESIGNER/FComponentes.html
@@ -2,13 +2,15 @@
 <html lang="es">
 <head>
 <meta charset="utf-8">
-	<title>Formulario</title>
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
+	<title>Componentes de Medicamentos</title>
 	<link rel="stylesheet" type="text/css" href="../estilo/fcomponentes.css">
+	<link rel="icon" type="img/jpg" href="../img/a.jpg">
 </head>
 <body>
   <div>
 	</br>
-  	<h1>COMPONENTES</h1>
+  	<h1>COMPONENTES DE MEDICAMENTOS</h1>
     <form class="contact_form">
 		</br>
     	<input type="text" style="width : 100 % ;"  placeholder="CodDetMedida">
