--- a/PROYECTO/DESIGNER/FFactura.html
+++ b/PROYECTO/DESIGNER/FFactura.html
@@ -14,6 +14,7 @@
         <li><label for="CostoUnitario">CostoUnitario:</label><input type="text" style="width : 100 % ;"  placeholder=""></li>
         <li><label for="CostoTotal">CostoTotal:</label><input type="text" style="width : 100 % ;"  placeholder=""></li>
         <li><label for="IGV">IGV:</label><input type="text" style="width : 100 % ;"  placeholder=""></li>
+        <li><label for="SubTotal">SubTotal:</label><input type="text" style="width : 100 % ;"  placeholder=""></li>
         <input type="submit" value="Guardar"  id="boton">
     	</ul>
     </form>
