--- a/PROYECTO/DESIGNER/Menu/menu.html
+++ b/PROYECTO/DESIGNER/Menu/menu.html
@@ -63,7 +63,7 @@ background: #4B5F7C;
                            </div>
                            <div class="col-md-2">
                                 <img src="imagenes/Transportista.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="transportista.php" class="btn btn-success btn-block " >Transportista</a></div>
+                                <div><a href="../transportista.php" class="btn btn-success btn-block " >Transportista</a></div>
 
                            </div>
                            <div class="col-md-2">
