--- a/PROYECTO/DESIGNER/FAlmacen.html
+++ b/PROYECTO/DESIGNER/FAlmacen.html
@@ -12,6 +12,7 @@
     	<ul>
     		<li><label for="Id">Id:</label><input type="text" style="width : 100 % ;"  placeholder=""></li>
         <li><label for="CodDetMedicamento">CodDetMedicamento:</label><input type="text" style="width : 100 % ;"  placeholder=""></li>
+        <li><label for="StockActual">StockActual:</label><input type="text" style="width : 100 % ;"  placeholder=""></li>
         <input type="submit" value="Guardar"  id="boton">
     	</ul>
     </form>
