Correccion de Titulos

--- a/PROYECTO/DESIGNER/Menu/menu.html
+++ b/PROYECTO/DESIGNER/Menu/menu.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>EscritosBlas</title>
+  <title>FamiSalud</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -20,11 +20,7 @@ footer{
 }
 body{
 background: #4B5F7C;
-
-
 }
-
-
 </style>
 <br>
 <br>
@@ -106,7 +102,7 @@ background: #4B5F7C;
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/informemedicamento.jpg" alt="" width="100%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Medicamente</a></div>
+                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Medicamento</a></div>
 
                                                     </div>
                                                     <div class="col-md-2">
@@ -116,24 +112,16 @@ background: #4B5F7C;
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/laboratorio.png" alt="" width="100%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Laboratorios </a></div>
+                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Laboratorio </a></div>
 
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/trasnporte.png" alt="" width="100%"  class="img img-rounded">
                                                       <div><a href="#ventana4" class="btn  btn-danger btn-block" >Transporte</a></div>
-
                                                     </div>
-
                                 </div>
-
-
-
                           </div>
-
                           </div>
-
-
                  </section>
               </div>
 </body>
