update Transportista Menu
Redireccionando empleado, transporte

--- a/PROYECTO/DESIGNER/Menu/menu.html
+++ b/PROYECTO/DESIGNER/Menu/menu.html
@@ -49,12 +49,12 @@ background: #4B5F7C;
                           <div class="row">
                            <div class="col-md-2">
                                 <img src="imagenes/empleado.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="empleado.php" class="btn btn-success btn-block " >Empleado</a></div>
+                                <div><a href="../registrarEmpleado.php" class="btn btn-success btn-block " >Empleado</a></div>
 
                            </div>
                            <div class="col-md-2">
                                 <img src="imagenes/trasnporte.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="#ventana1" class="btn btn-success btn-block " >Transporte</a></div>
+                                <div><a href="transporte.php" class="btn btn-success btn-block " >Transporte</a></div>
 
                            </div>
                            <div class="col-md-2">
