--- a/PROYECTO/DESIGNER/Menu/menu.html
+++ b/PROYECTO/DESIGNER/Menu/menu.html
@@ -64,17 +64,17 @@ background: #4B5F7C;
                            </div>
                            <div class="col-md-2">
                                 <img src="imagenes/guiaremision.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="#ventana1" class="btn btn-success btn-block " >Guia de Remision </a></div>
+                                <div><a href="guiaremision.php" class="btn btn-success btn-block " >Guia de Remision </a></div>
 
                            </div>
                            <div class="col-md-2">
                                 <img src="imagenes/medicamento.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="#ventana1" class="btn btn-success btn-block " >Medicamento</a></div>
+                                <div><a href="medicamento.php" class="btn btn-success btn-block " >Medicamento</a></div>
 
                            </div>
                            <div class="col-md-2">
                                 <img src="imagenes/laboratorio.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="#ventana1" class="btn btn-success btn-block " >Laboratorio</a></div>
+                                <div><a href="laboratorio.php" class="btn btn-success btn-block " >Laboratorio</a></div>
 
                            </div>
 
