--- a/PROYECTO/DESIGNER/Menu/menu.html
+++ b/PROYECTO/DESIGNER/Menu/menu.html
@@ -49,7 +49,7 @@ background: #4B5F7C;
                           <div class="row">
                            <div class="col-md-2">
                                 <img src="imagenes/empleado.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="../registrarEmpleado.php" class="btn btn-success btn-block " >Empleado</a></div>
+                                <div><a href="regempleado.php" class="btn btn-success btn-block " >Empleado</a></div>
 
                            </div>
                            <div class="col-md-2">
@@ -92,16 +92,16 @@ background: #4B5F7C;
 
                                                     <div class="col-md-2">
                                                       <img src="imagenes/almacen.png" alt="" width="90%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Almacen</a></div>
+                                                      <div><a href="informealmacen.php" class="btn  btn-danger btn-block" >Almacen</a></div>
 
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/empleado.png" alt="" width="90%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Empleado</a></div>
+                                                      <div><a href="informepersona.php" class="btn  btn-danger btn-block" >Empleado</a></div>
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/informemedicamento.jpg" alt="" width="90%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Medicamento</a></div>
+                                                      <div><a href="informemedicamento.php" class="btn  btn-danger btn-block" >Medicamento</a></div>
 
                                                     </div>
                                                     <div class="col-md-2">
