--- a/PROYECTO/DESIGNER/Menu/menu.html
+++ b/PROYECTO/DESIGNER/Menu/menu.html
@@ -49,7 +49,7 @@ background: #4B5F7C;
                           <div class="row">
                            <div class="col-md-2">
                                 <img src="imagenes/empleado.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="regempleado.php" class="btn btn-success btn-block " >Empleado</a></div>
+                                <div><a href="../regempleado.php" class="btn btn-success btn-block " >Empleado</a></div>
 
                            </div>
                            <div class="col-md-2">
