--- a/PROYECTO/DESIGNER/Menu/menu.html
+++ b/PROYECTO/DESIGNER/Menu/menu.html
@@ -109,8 +109,8 @@ background: #4B5F7C;
                                                       <div><a href="#ventana4" class="btn  btn-danger btn-block" >Guia de Remision </a></div>
                                                     </div>
                                                     <div class="col-md-2">
-                                                      <img src="imagenes/transportista.png" alt="" width="90%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Transportista</a></div>
+                                                      <img src="imagenes/informetransportista.png" alt="" width="100%"  class="img img-rounded">
+                                                      <div><a href="informetransportista.png" class="btn  btn-danger btn-block" >Transportista</a></div>
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/laboratorio.png" alt="" width="90%"  class="img img-rounded">
