--- a/PROYECTO/DESIGNER/Menu/menu.html
+++ b/PROYECTO/DESIGNER/Menu/menu.html
@@ -100,8 +100,8 @@ background: #4B5F7C;
                                                       <div><a href="informepersona.php" class="btn  btn-danger btn-block" >Empleado</a></div>
                                                     </div>
                                                     <div class="col-md-2">
-                                                      <img src="imagenes/informemedicamento.jpg" alt="" width="90%"  class="img img-rounded">
-                                                      <div><a href="informemedicamento.php" class="btn  btn-danger btn-block" >Medicamento</a></div>
+                                                      <img src="imagenes/informemedicamento.png" alt="" width="90%"  class="img img-rounded">
+                                                      <div><a href="informemedicamento.png" class="btn  btn-danger btn-block" >Medicamento</a></div>
 
                                                     </div>
                                                     <div class="col-md-2">
