--- a/PROYECTO/DESIGNER/Menu/menu.html
+++ b/PROYECTO/DESIGNER/Menu/menu.html
@@ -113,8 +113,8 @@ background: #4B5F7C;
                                                       <div><a href="informetransportista.png" class="btn  btn-danger btn-block" >Transportista</a></div>
                                                     </div>
                                                     <div class="col-md-2">
-                                                      <img src="imagenes/laboratorio.png" alt="" width="90%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Laboratorio </a></div>
+                                                      <img src="imagenes/informelaboratorio.png" alt="" width="110%"  class="img img-rounded">
+                                                      <div><a href="informelaboratorio" class="btn  btn-danger btn-block" >Laboratorio </a></div>
 
                                                     </div>
                                                     <div class="col-md-2 col-md-offset-5">
