--- a/PROYECTO/DESIGNER/Menu/menu.html
+++ b/PROYECTO/DESIGNER/Menu/menu.html
@@ -114,12 +114,12 @@ background: #4B5F7C;
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/informelaboratorio.png" alt="" width="110%"  class="img img-rounded">
-                                                      <div><a href="informelaboratorio" class="btn  btn-danger btn-block" >Laboratorio </a></div>
+                                                      <div><a href="informelaboratorio.png" class="btn  btn-danger btn-block" >Laboratorio </a></div>
 
                                                     </div>
                                                     <div class="col-md-2 col-md-offset-5">
-                                                      <img src="imagenes/trasnporte.png" alt="" width="90%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Transporte</a></div>
+                                                      <img src="imagenes/informetransporte.png" alt="" width="90%"  class="img img-rounded">
+                                                      <div><a href="informetransporte.png" class="btn  btn-danger btn-block" >Transporte</a></div>
                                                     </div>
                                 </div>
                           </div>
