--- a/PROYECTO/DESIGNER/Menu/menu.html
+++ b/PROYECTO/DESIGNER/Menu/menu.html
@@ -75,7 +75,7 @@ background: #4B5F7C;
                            </div>
                            <div class="col-md-2">
                                 <img src="imagenes/guiaremision.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="#ventana1" class="btn btn-success btn-block " >Guia de Remision </a></div>
+                                <div><a href="guiaremision.png" class="btn btn-success btn-block " >Guia de Remision </a></div>
 
                            </div>
                            <div class="col-md-2">
