--- a/PROYECTO/DESIGNER/Menu/menu.html
+++ b/PROYECTO/DESIGNER/Menu/menu.html
@@ -38,12 +38,8 @@ background: #4B5F7C;
                           <div class="container">
                             <h3><span class="glyphicon glyphicon-pencil"></span>Menu Farmacia </h3>
                                 <ul class="nav nav-pills">
-                                  <li role="presentation" ><a href="index.html">Indice</a></li>
-                                  <li role="presentation"><a href="gustos.html">Gustos</a></li>
-                                  <li role="presentation"><a href="pensamientos.html">Pensamientos</a></li>
-                                   <li role="presentation"> <a href="escritos.html">Escritos</a></li>
-                                   <li role="presentation"> <a href="proyectos.html">Proyectos</a></li>
-                                   <li role="presentation"><a href="mas.html">Mas </a></li>
+                                  <li role="presentation" ><a href="index.html">Inicio</a></li>
+                                 
                               </ul>
                         </div>
                       </nav>
@@ -60,7 +56,7 @@ background: #4B5F7C;
                           <div class="row">
                            <div class="col-md-2">
                                 <img src="imagenes/empleado.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="empleado.php" class="btn btn-success btn-block " >Empleado</a></div>
+                                <div><a href="../regempleado.php" class="btn btn-success btn-block " >Empleado</a></div>
 
                            </div>
                            <div class="col-md-2">
@@ -113,7 +109,7 @@ background: #4B5F7C;
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/informemedicamento.jpg" alt="" width="100%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Medicamente</a></div>
+                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Medicamento</a></div>
 
                                                     </div>
                                                     <div class="col-md-2">
