--- a/PROYECTO/DESIGNER/menu.html
+++ b/PROYECTO/DESIGNER/menu.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>EscritosBlas</title>
+  <title>Menu</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -38,7 +38,7 @@ background: #4B5F7C;
                           <div class="container">
                             <h3><span class="glyphicon glyphicon-pencil"></span>Menu Farmacia </h3>
                                 <ul class="nav nav-pills">
-                                  <li role="presentation" ><a href="index.html">Inicio</a></li>
+                                  <li role="presentation" ><a href="menu.html">Inicio</a></li>
                                  
                               </ul>
                         </div>
@@ -56,7 +56,7 @@ background: #4B5F7C;
                           <div class="row">
                            <div class="col-md-2">
                                 <img src="imagenes/empleado.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="../regempleado.php" class="btn btn-success btn-block " >Empleado</a></div>
+                                <div><a href="regempleado.php" class="btn btn-success btn-block " >Empleado</a></div>
 
                            </div>
                            <div class="col-md-2">
@@ -71,7 +71,7 @@ background: #4B5F7C;
                            </div>
                            <div class="col-md-2">
                                 <img src="imagenes/guiaremision.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="guiaremision.png" class="btn btn-success btn-block " >Guia de Remision </a></div>
+                                <div><a href="guiaremision.php" class="btn btn-success btn-block " >Guia de Remision </a></div>
 
                            </div>
                            <div class="col-md-2">
@@ -97,8 +97,8 @@ background: #4B5F7C;
                           <div class="panel-body">
                             <div class="row">
 
-                                                    <div class="col-md-2">
-                                                      <img src="imagenes/almacen.png" alt="" width="100%"  class="img img-rounded">
+                                <div class="col-md-2">
+                                    <img src="imagenes/almacen.png" alt="" width="100%"  class="img img-rounded">
                                                       <div><a href="#ventana4" class="btn  btn-danger btn-block" >Almacen</a></div>
 
                                                     </div>
