--- a/PROYECTO/DESIGNER/menu.html
+++ b/PROYECTO/DESIGNER/menu.html
@@ -61,7 +61,7 @@ background: #4B5F7C;
                            </div>
                            <div class="col-md-2">
                                 <img src="imagenes/trasnporte.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="#ventana1" class="btn btn-success btn-block " >Transporte</a></div>
+                                <div><a href="transporte.php" class="btn btn-success btn-block " >Transporte</a></div>
 
                            </div>
                            <div class="col-md-2">
@@ -76,12 +76,12 @@ background: #4B5F7C;
                            </div>
                            <div class="col-md-2">
                                 <img src="imagenes/medicamento.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="#ventana1" class="btn btn-success btn-block " >Medicamento</a></div>
+                                <div><a href="medicamento.php" class="btn btn-success btn-block " >Medicamento</a></div>
 
                            </div>
                            <div class="col-md-2">
                                 <img src="imagenes/laboratorio.png" alt="" width="100%" class="img img-rounded">
-                                <div><a href="#ventana1" class="btn btn-success btn-block " >Laboratorio</a></div>
+                                <div><a href="laboratorio.php" class="btn btn-success btn-block " >Laboratorio</a></div>
 
                            </div>
 
