update menu html
enlace

--- a/PROYECTO/DESIGNER/menu.html
+++ b/PROYECTO/DESIGNER/menu.html
@@ -39,7 +39,7 @@ background: #4B5F7C;
                             <h3><span class="glyphicon glyphicon-pencil"></span>Menu Farmacia </h3>
                                 <ul class="nav nav-pills">
                                   <li role="presentation" ><a href="menu.html">Inicio</a></li>
-                                 
+
                               </ul>
                         </div>
                       </nav>
@@ -104,7 +104,7 @@ background: #4B5F7C;
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/empleado.png" alt="" width="100%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Persona</a></div>
+                                                      <div><a href="informepersona.php" class="btn  btn-danger btn-block" >Persona</a></div>
 
                                                     </div>
                                                     <div class="col-md-2">
