--- a/PROYECTO/DESIGNER/menu.html
+++ b/PROYECTO/DESIGNER/menu.html
@@ -109,7 +109,8 @@ background: #4B5F7C;
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/informemedicamento.jpg" alt="" width="100%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Medicamento</a></div>
+                                                      <div><a href="informemedicamento.php" class="btn  btn-danger btn-block" >Medicamento</a></div>
+
 
                                                     </div>
                                                     <div class="col-md-2">
