--- a/PROYECTO/DESIGNER/menu.html
+++ b/PROYECTO/DESIGNER/menu.html
@@ -99,7 +99,7 @@ background: #4B5F7C;
 
                                 <div class="col-md-2">
                                     <img src="imagenes/almacen.png" alt="" width="100%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Almacen</a></div>
+                                                      <div><a href="informealmacen.php" class="btn  btn-danger btn-block" >Almacen</a></div>
 
                                                     </div>
                                                     <div class="col-md-2">
