--- a/PROYECTO/DESIGNER/menu.html
+++ b/PROYECTO/DESIGNER/menu.html
@@ -115,7 +115,7 @@ background: #4B5F7C;
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/informeempresa.jpg" alt="" width="100%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Guia de Remision </a></div>
+                                                      <div><a href="informeguiaremision.php" class="btn  btn-danger btn-block" >Guia de Remision </a></div>
 
                                                     </div>
                                                     <div class="col-md-2">
