--- a/PROYECTO/DESIGNER/menu.html
+++ b/PROYECTO/DESIGNER/menu.html
@@ -120,7 +120,7 @@ background: #4B5F7C;
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/laboratorio.png" alt="" width="100%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Laboratorios </a></div>
+                                                      <div><a href="informelaboratorio.php" class="btn  btn-danger btn-block" >Laboratorios </a></div>
 
                                                     </div>
                                                     <div class="col-md-2">
