--- a/PROYECTO/DESIGNER/menu.html
+++ b/PROYECTO/DESIGNER/menu.html
@@ -125,7 +125,7 @@ background: #4B5F7C;
                                                     </div>
                                                     <div class="col-md-2">
                                                       <img src="imagenes/trasnporte.png" alt="" width="100%"  class="img img-rounded">
-                                                      <div><a href="#ventana4" class="btn  btn-danger btn-block" >Transporte</a></div>
+                                                      <div><a href="informetransporte.php" class="btn  btn-danger btn-block" >Transporte</a></div>
 
                                                     </div>
 
