--- a/PROYECTO/DESIGNER/menu.html
+++ b/PROYECTO/DESIGNER/menu.html
@@ -11,34 +11,31 @@
 </head>
 <style media="screen">
 nav{
-  background:#202E37;
+  background:#5DADE2;
   color: white;
 }
 footer{
-  background:#202E37;
+  background:#ECF0F1;
   color: white;
 }
 body{
-background: #4B5F7C;
-
+background: white;
+margin-top: 130px;
 
 }
-
+.panel-heading{
+  background: red;
+}
 
 </style>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 <body>
               <header>
                         <nav class="navbar navbar-fixed-top" role="navigation">
-                          <div class="container">
+                          <div class="container" >
                             <h3><span class="glyphicon glyphicon-pencil"></span>Menu Farmacia </h3>
                                 <ul class="nav nav-pills">
-                                  <li role="presentation" ><a href="menu.html">Inicio</a></li>
+                                  <li role="presentation" ><a href="menu.html">INICIO</a></li>
 
                               </ul>
                         </div>
@@ -48,7 +45,7 @@ background: #4B5F7C;
                  <section class="col-md-12 color1">
 
                       <div class="panel panel-primary">
-                        <div class="panel-heading">
+                        <div class="panel-heading" >
                            <h3>Operaciones</h3>
                          </div>
                         <div class="panel-body">
