--- a/PROYECTO/DESIGNER/SesionError.html
+++ b/PROYECTO/DESIGNER/SesionError.html
@@ -21,7 +21,7 @@ echo 'as';
   <h2>
     <P>Su sesion ha expirado, por</p>
     <P>favor vuelva a ingresar</p>
-    <P>haciendo clic <a href="SesionIniciar.php">Aqui</a></p>
+    <P>haciendo clic <a href="../login.php">Aqui</a></p>
   </h2>
 
 </table>
